<?xml version="1.0"?>
<package format="2">
  <name>gazebo_tutorials</name>
  <version>0.0.0</version>
  <description>The Gazebo plugins of the March simulation</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
