<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>march_fake_sensor_data</name>
    <version>0.0.0</version>
    <description>Publishes fake sensor data for testing without hardware connected</description>

    <maintainer email="software@projectmarch.nl">Project March</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
